--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "10.0.2",
+  "version": "10.0.3",
   "license": "MIT",
   "scripts": {
     "release": "standard-version",
@@ -25,15 +25,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.0.1",
-    "@angular/common": "10.0.1",
-    "@angular/compiler": "10.0.1",
-    "@angular/core": "10.0.1",
-    "@angular/elements": "10.0.1",
-    "@angular/forms": "10.0.1",
-    "@angular/platform-browser": "10.0.1",
-    "@angular/platform-browser-dynamic": "10.0.1",
-    "@angular/router": "10.0.1",
+    "@angular/animations": "9.0.7",
+    "@angular/common": "9.0.7",
+    "@angular/compiler": "9.0.7",
+    "@angular/core": "9.0.7",
+    "@angular/elements": "9.0.7",
+    "@angular/forms": "9.0.7",
+    "@angular/platform-browser": "9.0.7",
+    "@angular/platform-browser-dynamic": "9.0.7",
+    "@angular/router": "9.0.7",
     "@webcomponents/custom-elements": "^1.2.4",
     "angular-oauth2-oidc": "^9.0.1",
     "angular-oauth2-oidc-jwks": "^9.0.0",
@@ -49,14 +49,15 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular-devkit/build-ng-packagr": "~0.1000.0",
-    "@angular/cli": "^10.0.0",
-    "@angular/compiler-cli": "10.0.1",
-    "@angular/language-service": "10.0.1",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular-devkit/build-ng-packagr": "~0.900.7",
+    "@angular/cli": "^9.0.7",
+    "@angular/compiler-cli": "9.0.7",
+    "@angular/language-service": "9.0.7",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@compodoc/compodoc": "^1.1.11",
+    "@rollup/plugin-commonjs": "^11.0.2",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "^12.11.1",
@@ -68,22 +69,22 @@
     "github-contributors-list": "^1.2.4",
     "husky": "^3.0.9",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "markdown-magic": "^1.0.0",
     "markdown-magic-github-contributors": "0.0.3",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^9.0.0",
     "prettier": "^1.19.1",
-    "protractor": "~7.0.0",
+    "protractor": "~5.4.3",
     "standard-version": "^7.0.0",
     "ts-node": "~8.6.2",
-    "tslint": "~6.1.0",
-    "typescript": "^3.9.5"
+    "tslint": "^6.1.0",
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
