--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "10.0.3",
+  "version": "10.0.4",
   "license": "MIT",
   "scripts": {
     "release": "standard-version",
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "9.0.7",
     "@angular/router": "9.0.7",
     "@webcomponents/custom-elements": "^1.2.4",
+    "a-9-oidc-oauth2": "^10.0.3",
     "angular-oauth2-oidc": "^9.0.1",
     "angular-oauth2-oidc-jwks": "^9.0.0",
     "base64-js": "^1.3.0",
