--- a/package.json
+++ b/package.json
@@ -35,13 +35,12 @@
     "@angular/platform-browser-dynamic": "9.0.7",
     "@angular/router": "9.0.7",
     "@webcomponents/custom-elements": "^1.2.4",
-    "a-9-oidc-oauth2": "^10.0.3",
-    "angular-oauth2-oidc": "^9.0.1",
-    "angular-oauth2-oidc-jwks": "^9.0.0",
+    "a-9-oidc-oauth2": "^10.0.6",
     "base64-js": "^1.3.0",
     "bootstrap": "^3.3.7",
     "jsrsasign": "^8.0.19",
     "ngx-semantic-version": "^1.2.1",
+    "oa2-jwks-a9": "^10.0.6",
     "rxjs": "6.5.4",
     "rxjs-compat": "^6.5.2",
     "text-encoder-lite": "^1.0.1",
