--- a/projects/angular-oauth2-oidc-jwks/package.json
+++ b/projects/angular-oauth2-oidc-jwks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-oauth2-oidc-jwks",
+  "name": "oa2-jwks-a9",
   "version": "10.0.0",
   "dependencies": {
     "jsrsasign": "^8.0.12"
