--- a/projects/lib/package.json
+++ b/projects/lib/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-oauth2-oidc",
+  "name": "a-9-oidc-oauth2",
   "license": "MIT",
   "author": {
-    "name": "Manfred Steyer"
+    "name": "Marcos Volpato"
   },
   "version": "10.0.2",
-  "repository": "manfredsteyer/angular-oauth2-oidc",
+  "repository": "marcosvolpato/angular-oauth2-oidc",
   "peerDependencies": {
     "@angular/common": ">=8.0.0",
     "@angular/core": ">=8.0.0"
